<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuBotones">

    <Button
        android:id="@+id/buttonGraficos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="verGraficas"
        android:text="@string/buttonGraficos"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/buttonReporteOperadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:onClick="reporteOperadores"
        android:text="@string/buttonReporteOperador"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGraficos"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonReporteGraficos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reporteGraficas"
        android:text="@string/buttonReporteGraficos"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReporteOperadores"
        app:layout_constraintVertical_bias="0.324" />
</androidx.constraintlayout.widget.ConstraintLayout>